name:                 ModML-Core
version:              0.0.1
cabal-version:        >= 1.6
license:              BSD3
build-type:           Simple
copyright:            Andrew Miller
author:               Andrew Miller
maintainer:           Andrew Miller <ak.miller@auckland.ac.nz>
stability:            experimental
synopsis:             A mathematical modelling DSL built on functional transformations
description:          A mathematical modelling DSL built on functional transformations

library
  hs-source-dirs:       .
  exposed-modules:
    ModML.Core.BasicDAEModel,
    ModML.Core.BasicDAEOpAliases
  build-depends: base ==4.*,
                 containers == 0.3.*,
                 mtl == 1.*,
                 typehash == 1.*
